--- a/src/Components/TodoItems/TodoItems.css
+++ b/src/Components/TodoItems/TodoItems.css
@@ -1,3 +1,75 @@
 .x:hover{
     cursor: pointer;
 }
+
+.x{
+    color: red;
+    position: absolute;
+    right: 200px;
+}
+
+
+.ListItems{
+    margin-top: 30px;
+    background: white;
+    width: 77.5%;
+    margin-left: 150px;
+    height: 50px;
+    text-align: center;
+    font-size: x-large;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+
+.ListItems span.hours{
+    text-align: center;
+    position: absolute;
+    right: 460px;
+    word-spacing: 100px;
+    font-size: 20px;
+}
+.ListItems span.name{
+    text-align: center;
+    position: absolute;
+    left: 360px;
+    font-size: 20px;
+}
+.ListItems span.Action{
+    text-align: center;
+    position: absolute;
+    right: 180px;
+    font-size: 20px;
+}
+
+form input{
+
+    padding: 10px;
+    background: #ebebeb;
+    border: transparent;
+    border: 0.3px solid #ccc;
+
+}
+
+form input[type=submit]{
+    background: #2ebeee;
+    border: 0.3px solid #2ebeee;
+    cursor: pointer;
+}
+
+.ConstItems{
+    background-color: #ffffff;
+    margin-left:150px;
+    width: 77.5%;
+    padding-bottom: 50px;
+    text-align: center;
+    font-size: x-large;
+}
+
+.ConstItems span.name{
+    position: absolute;
+    left: 350px;
+}
+.ConstItems span.hours{
+    position: absolute;
+    right: 470px;
+}
